@@ -12,6 +12,8 @@ Changes from 0.2 to 0.3
 - Added a new `ctable` class that implements a compressed, column-wise
   table.
 
+- New `test()` function that runs the complete test suite.
+
 - Added a new `eval()` function to evaluate expressions including any
   combination of carrays, ndarrays, sequences or scalars.  Requires
   Numexpr being installed.
